--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: main
 <p>Here is a non-exhaustive list of things I've worked on or am currently doing. At the bottom of this page will be links to my blog posts.</p>
 
 <p>I currently compete in the Platinum division of the <a href="http://usaco.org">USA Computing Olympiad</a> (top 200 students nationally). </p>
-<p>I wrote the <a href="https://darren-yao.gitbook.io/darren-s-blog/usaco-faq">USACO Frequently Asked Questions</a></p>
+<p>I wrote the <a href="https://darrenyao.com/usacofaq/">USACO Frequently Asked Questions</a></p>
 <p>In addition, I&#39;m the author of the book <em>An Introduction to the USA Computing Olympiad</em>, a one-stop-shop comprehensive training resource for the Bronze and Silver divisions of the USACO. </p>
 <ul>
 <li><a href="http://darrenyao.com/usacobook/java.pdf">Java Edition</a></li>
