--- a/pages/math.html
+++ b/pages/math.html
@@ -2,15 +2,7 @@
 layout: main
 ---
 
-<p>Here&#39;s a few expository mathematical papers I've written on various topics as projects for the <a href="https://eulercircle.com/">Euler Circle</a> math program:</p>
-<ul>
-<li><a href="http://darrenyao.com/expository-papers/diophantineec.pdf">Solving a Diophantine Equation with Elliptic Curves</a></li>
-<li><a href="http://darrenyao.com/expository-papers/div_series.pdf">On Methods of Evaluating Divergent Series</a></li>
-<li><a href="http://darrenyao.com/expository-papers/intro_alg_field.pdf">Introduction to Division Algebras over Fields</a></li>
-<li><a href="http://darrenyao.com/expository-papers/dedekind_icg.pdf">Dedekind Domains and Ideal Class Groups</a></li>
-<li><a href="http://darrenyao.com/expository-papers/inequalities.pdf">Important Inequalities in Real Analysis</a></li>
-<li><a href="http://darrenyao.com/expository-papers/covertimes.pdf">Cover Times of Random Walks</a></li>
-</ul>
+I'm a student at the <a href="eulercircle.com">Euler Circle Mathematics Institute</a>. The classes I've taken are Cryptography, Infinite Series, Abstract Algebra, Proofs from the Book, Markov Chains, and Complex Analysis.
 
 NanoMath is a student-run nonprofit organization I founded that organizes math contests and other events.
 <ul>
