--- a/pages/robotics.html
+++ b/pages/robotics.html
@@ -3,7 +3,7 @@ layout: main
 ---
 
 <ul>
-    <li>I'm an alumni of FRC Team 199, Deep Blue Robotics, at Carlmont High School.</li>
+    <li></li> FRC Team 199, Deep Blue Robotics, at Carlmont High School.</li>
     <li>As a freshman and sophomore, I served as a Project Lead, where I was in charge of bumpers, hatch panel mechanism, scouting, and competition planning. </li>
     <li>As a junior and senior, I became a co-lead of the Fabrication subteam, where I managed training during pre-season and manufacturing and assembly of the robot during build season, in addition to my previous duties. </li>
     <li>Here is the <a href="{{ site.baseurl }}/robotics/drivetrains.pdf">Introduction to FRC Drivetrains</a>  presentation, which I gave at the WRRF Spark conference in Fall 2020.</li>
