--- a/pages/tutoring.html
+++ b/pages/tutoring.html
@@ -10,9 +10,9 @@ layout: main
 <li>Competition Math: Mathcounts, AMC 8, and Introductory AMC 10/12.</li>
 <li>Computer Science: Introduction to Programming in C++ or Java.</li>
 <li>Competitive Programming: USACO Bronze, Silver, and Gold.</li>
-<li>Standardized Tests: SAT/ACT and Math Subject Tests </li>
+<li>Standardized Tests: SAT</li>
 </ul>
 
 <p>My qualifications: AP Calculus BC (5), AP Statistics (5), AP Computer Science (5), Multivariable Calculus (A), Linear Algebra (A); Discrete Mathematics (A)
-5x AIME Qualifier, 200+ USAMO index, USACO Platinum;
+Multiple-time AIME Qualifier with 200+ USAMO index, USACO Platinum;
 Author of Introduction to USACO textbook, Core Staff of USACO-Guide and Competitive Programming Initiative. </p>
