--- a/pages/tutoring.html
+++ b/pages/tutoring.html
@@ -3,7 +3,7 @@ layout: main
 ---
 
 
-<p>I do private tutoring online over Zoom, in the following subjects. Please DM me for details if you're interested. </p>
+<p>I do private tutoring online over Zoom, in the following subjects. Please contact me for details, tuition rates, etc, if you're interested. </p>
 <p>
 <ul>
 <li>School Math: Algebra I and II, Geometry, Trigonometry, Precalculus, AP Calculus AB/BC, AP Statistics, Multivariable Calculus, and Linear Algebra.</li>
