--- a/pages/math.html
+++ b/pages/math.html
@@ -2,7 +2,7 @@
 layout: main
 ---
 
-I'm a student at the <a href="eulercircle.com">Euler Circle Mathematics Institute</a>. The classes I've taken are Cryptography, Infinite Series, Abstract Algebra, Proofs from the Book, Markov Chains, and Complex Analysis.
+I'm a student at the <a href="eulercircle.com">Euler Circle Mathematics Institute</a>. 
 
 NanoMath is a student-run nonprofit organization I founded that organizes math contests and other events.
 <ul>
