--- a/pages/tutoring.html
+++ b/pages/tutoring.html
@@ -8,11 +8,11 @@ layout: main
 <ul>
 <li>School Math: Algebra I and II, Geometry, Trigonometry, Precalculus, AP Calculus AB/BC, AP Statistics, Multivariable Calculus, and Linear Algebra.</li>
 <li>Competition Math: Mathcounts, AMC 8, and Introductory AMC 10/12.</li>
-<li>Computer Science: Introduction to Programming in C++ or Java.</li>
+<li>Computer Science: Introduction to Programming in Java, AP Computer Science A.</li>
 <li>Competitive Programming: USACO Bronze, Silver, and Gold.</li>
 <li>Standardized Tests: SAT</li>
 </ul>
 
-<p>My qualifications: AP Calculus BC (5), AP Statistics (5), AP Computer Science (5), Multivariable Calculus (A), Linear Algebra (A); Discrete Mathematics (A)
-Multiple-time AIME Qualifier with 200+ USAMO index, USACO Platinum;
+<p>My qualifications: AP Calculus BC (5), AP Statistics (5), AP Computer Science A (5), Multivariable Calculus (A), Linear Algebra (A); Discrete Mathematics (A)
+Multiple-time AIME Qualifier, USACO Platinum;
 Author of Introduction to USACO textbook, Core Staff of USACO-Guide and Competitive Programming Initiative. </p>
