--- a/pages/math.html
+++ b/pages/math.html
@@ -2,7 +2,7 @@
 layout: main
 ---
 
-I'm a student at the <a href="eulercircle.com">Euler Circle Mathematics Institute</a>. 
+I'm an alumni of the <a href="eulercircle.com">Euler Circle Mathematics Institute</a>. 
 
 NanoMath is a student-run nonprofit organization I founded that organizes math contests and other events.
 <ul>
